--- a/site_app/static/site_app/css/liste_imp.scss
+++ b/site_app/static/site_app/css/liste_imp.scss
@@ -4,19 +4,27 @@
     z-index: 200; /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
+    // width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(255, 255, 255); /* Black w/ opacity */
     // display: grid;
     place-items: center;
-    padding: 0;
-    th{
-      border: 1px solid rgb(148, 148, 148);
+    padding: 1rem;
+
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+        font-size: 0.8rem;
+
+      }
+
+    th,td{
+      border: 1px solid rgb(216, 216, 216);
       padding: 8px;
       margin: 0;
       text-align: left;
-      font-size: 0.8rem;
     }
     
   }
